# tri_photo

./: .gitignore  CHANGELOG.md  CHANGES  COPYRIGHT.md  Cargo.toml  LICENSE-MIT.md  README.md  build.rs  install.sh  install_icons.sh  install_tri_photo.sh  tp.desktop  tp.pot  translate.sh
locale/fr/LC_MESSAGES/: install_tri_photo.sh.mo  tp.mo  tp.po
src/: gresources.rs  lib.rs  main.rs
src/app/: mod.rs  style.css
src/directory/: mod.rs
src/file/: mod.rs
src/file_choser/: mod.rs
src/geo/: mod.rs
src/gest_files/: mod.rs
src/gui/: mod.rs
src/gui/gif_paintable/: frame.rs  imp.rs  mod.rs
src/gui/help_gui/: imp.rs  mod.rs
src/header_bar/: mod.rs
src/help_gui/: imp.rs  mod.rs
src/message/: mod.rs
src/popup_accueil/: imp.rs  mod.rs
src/rename/: imp.rs  mod.rs
src/resources/: gui.ui  help_gui.ui  message.ui  popup_accueil.ui  rename.ui  resources.gresource.xml  working.ui
src/text/: mod.rs
src/working/: imp.rs  mod.rs
src/working/message/: imp.rs  mod.rs
src/working/rename/: mod.rs
