[package]
name = "tri_photo"
version = "1.0.0"  #:version
authors = ["Nicolas Filippozzi <nicolasfilippozzi@gmail.com>"]
description = """
tri_photo is a photo/image copy program, it can be installed on linux, mac or window.
"""
categories = ["multimedia::images"]
autotests = false
edition = "2021"
rust-version = "1.75"
readme = "README.md"
repository = "https://github.com/nfili/tri_photo"
license = "MIT OR Apache-2.0"

[[bin]]
path="src/main.rs"
name="tp"

[dependencies]
kamadak-exif = "0.5.5"
fs2 = "0.4.3"
byte-unit = "4.0.14"
gtk = { version = "0.7.3", package = "gtk4" }
glib="0.18.3"
gio = "0.18.3"
image = "0.24.7"
conv = "0.3.2"
regex = "1.10.2"
chrono = "0.4.31"
reverse_geocoder = "4.1.1"
gettext = "0.4.0"

[build-dependencies]
glib-build-tools = "0.18.0"


[package.metadata.deb]
maintainer = "Clyds <nicolasfilippozzi@gmail.com>"
copyright = "2024, 2024 <nicolasfilippozzi@gmail.com>"
